src/objects/Apttus_Config2__OrderWorkflowRule__c.object
<CustomObject>
    <description>Represents a single rule in a order workflow ruleset</description>
    <fields>
        <fullName>Apttus_Config2__Action__c</fullName>
        <description>The action associated with the rule</description>
        <inlineHelpText>The action associated with the rule</inlineHelpText>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amend Order</fullName>
                </value>
                <value>
                    <fullName>Amend And Accept Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel And Accept Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <inlineHelpText>The description for the rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
        <description>Indicates the number of entries associated with the order workflow rule</description>
        <inlineHelpText>Indicates the number of entries associated with the order workflow rule</inlineHelpText>
        <label>Number Of Entries</label>
        <summaryForeignKey>Apttus_Config2__OrderWorkflowRuleEntry__c.Apttus_Config2__RuleId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <inlineHelpText>ID of the associated rule set</inlineHelpText>
        <label>Ruleset</label>
        <referenceTo>Apttus_Config2__OrderWorkflowRuleset__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <inlineHelpText>The rule evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Workflow Rule</label>
    <nameField>
        <displayFormat>OR-{0000000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Workflow Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>